--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-select": "^3.0.27",
     "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^3.1.1",
     "react-spring": "^8.0.27",
     "react-toastify": "^6.1.0",
     "typescript": "^4.0.3",
