--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^0.21.0",
     "rc-tween-one": "^2.7.3",
     "react": "^17.0.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
