--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "zero2ckb-web",
   "version": "0.1.0",
   "private": true,
+  "author": "retricsu <retric@cryptape.com>",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -18,6 +19,7 @@
     "i18next": "^21.6.13",
     "i18next-browser-languagedetector": "^6.1.3",
     "jsbi": "^3.1.4",
+    "prettier": "^2.5.1",
     "rc-tween-one": "^2.7.3",
     "react": "^17.0.1",
     "react-dnd": "^11.1.3",
@@ -33,6 +35,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "fmt": "prettier --write server.js **/*.{ts,tsx,js,jsx,css,json} src/**/*.{ts,tsx,js,jsx,css,json} package.json",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
