--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^17.0.1",
+    "react-github-btn": "^1.2.2",
     "react-i18next": "^11.15.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
